add index dashboard view

--- a/app/views/dashboard/index.html
+++ b/app/views/dashboard/index.html
@@ -5,9 +5,21 @@
     <title>Dashboard</title>
 </head>
 <body>
+{{ successMessage }}
+{{ errorMessage }}
 <h1>Dashboard</h1>
 {% if user %}
-<span>{{ user.username }}</span>
+{% if !user.verified %}
+    <h3>sin verificar  ,revisa tu correo</h3>
 {% endif %}
+    <span>{{ user.firstname }}</span>
+    <br/>
+    <a href="/user/{{ user.username }}">go to profile</a>
+    <br/>
+    <a href="/users">go to users</a>
+    <br/>
+    <a href="/user/{{ user.username }}/portfolio/upload">upload new work</a>
+{% endif %}
+
 </body>
 </html>
