refactor index dashboard

--- a/app/views/dashboard/index.html
+++ b/app/views/dashboard/index.html
@@ -18,7 +18,7 @@
     <br/>
     <a href="/users">go to users</a>
     <br/>
-    <a href="/user/{{ user.username }}/portfolio/upload">upload new work</a>
+    <a href="/user/{{ user.username }}/work/create">upload new work</a>
 {% endif %}
 
 </body>
