refactor urls for owner

--- a/app/views/user/owner.html
+++ b/app/views/user/owner.html
@@ -44,7 +44,7 @@
 {% endif %}
 
 <h1>Portfolio</h1>
-<a href="/user/{{ user.username }}/portfolio/upload">upload a new work</a>
+<a href="/user/{{ user.username }}/work/create">create a new work</a>
 
 <h3>likes</h3>
 {% if likes.length > 0 %}
