--- a/app/views/user/work-create.html
+++ b/app/views/user/work-create.html
@@ -2,11 +2,11 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <title>Upload</title>
+  <title>Add work</title>
 </head>
 <body>
 
-<form action="/user/{{ user.username }}/portfolio/upload" method="post">
+<form action="/user/work/create" method="post">
     <button>add</button>
 </form>
 
