--- a/app/views/dashboard/index.html
+++ b/app/views/dashboard/index.html
@@ -18,6 +18,8 @@
     <br/>
     <a href="/users">go to users</a>
     <br/>
+    <a href="/works">go to works</a>
+    <br/>
     <a href="/user/{{ user.username }}/work/create">upload new work</a>
 {% endif %}
 
