add test link for filters

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,6 +25,8 @@
 
     <br/>
     <a href="/auth/forgot">olvidaste tu contraseña ? </a>
+
+    <a href="/works/search?p=10&pe=30&lel=hola k ase">lel</a>
 </form>
 
 <script src="/js/lib/jquery.min.js"></script>
