add dashboard index

--- a/app/views/dashboard/index.html
+++ b/app/views/dashboard/index.html
@@ -16,9 +16,9 @@
     <br/>
     <a href="/user/{{ user.username }}">go to profile</a>
     <br/>
-    <a href="/users">go to users</a>
+    <a href="/users/specialty/all/page-1?order=popularity">go to users</a>
     <br/>
-    <a href="/works">go to works</a>
+    <a href="/works/category/all/page-1?order=popularity">go to works</a>
     <br/>
     <a href="/user/{{ user.username }}/work/create">upload new work</a>
 {% endif %}
