--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -19,6 +19,14 @@
             background-color: #90EE90;
         }
 
+        .featured {
+            background-color: #2a83ed;
+        }
+
+        .unfeatured {
+            background-color: cornflowerblue;
+        }
+
         .unlike {
             background-color: aquamarine;
         }
@@ -26,32 +34,172 @@
 </head>
 <body>
 
-<ul>
-    {% for work in works %}
-        {{ work.lel }}
-        <div style="margin: 10px;width: 200px;">
-            <li> - {{ work.name }}</li>
-            <li><strong>{{ work.likes }}</strong> <em>likes</em></li>
-            <img class="rounded" src="{{ work.photo }}"><br/>
-            <button id="{{ work.id }}" class="like">Like</button>
-            <button id="{{ work.id }}" class="collect">Collect</button>
-        </div>
-    {% endfor %}
+
+<h3>categories</h3>
+<ul class="categoriesContainer">
+</ul>
+
+<h3>ordenar por</h3>
+<ul class="orderContainer">
+</ul>
+
+<h3>tiempo</h3>
+<ul class="timeContainer">
+</ul>
+
+
+<h3>works</h3>
+
+{% if works.length > 0 %}
+    <ul>
+        {% for work in works %}
+            <div style="margin: 10px;width: 200px;">
+                <li>{{ work.id }} - {{ work.name }}</li>
+                <img class="rounded" src="{{ work.photo }}"><br/>
+
+
+                {% if work.owner %}
+                    <span><strong>owner</strong></span>
+                {% endif %}
+                {% if work.viewed %}
+                    <span style="color: #5794db"><strong><em>viewed</em></strong></span>
+                {% endif %}
+
+                <p>
+                    likes <span class="likes">{{ work.likes }}</span>
+                    <span>views {{ work.views }}</span>
+                    <span>collects {{ work.collects }}</span>
+                    <br/>
+                        <span class="featuredlogo"
+                                {% if work.featured %}
+                                    style="display: block;"
+                                {% else %}
+                                    style="display: none;"
+                                {% endif %}
+                                >producto destacado</span>
+                </p>
+
+                <p>{{ work.User.firstname }}</p>
+                <br/>
+
+
+
+                {% if work.liked %}
+                    <button id="{{ work.id }}" class="unlike">Unlike</button>
+                {% else %}
+                    <button id="{{ work.id }}" class="like">Like</button>
+                {% endif %}
+
+                <button id="{{ work.id }}" class="collect">Collect</button>
+                {% if work.featured %}
+                    <button id="{{ work.id }}" class="unfeatured">Unfeatured</button>
+                {% else %}
+                    <button id="{{ work.id }}" class="featured">Featured</button>
+                {% endif %}
+            </div>
+        {% endfor %}
+    </ul>
+{% else %}
+    <p>no hay obras para <strong>{{ currentCategory }}</strong></p>
+{% endif %}
+
+<ul class="pagination">
+
 </ul>
 <script src="/js/lib/jquery.min.js"></script>
 <script>
-    $(function () {
-        var works = {{ works|json|safe }};
-        var likes ={{ likes|json|safe }};
-        console.log(works);
-        var i, like;
-        for (i = 0; i < likes.length; i++) {
-            like = $('#' + likes[i].id);
-            like.text('Unlike');
-            like.removeClass('like').addClass('unlike');
+    var pagination = {{ pagination|json|safe }};
+    var user = {{ user|json|safe }};
+    var works = {{ works|json|safe }};
+    var categories = {{ categories|json|safe }};
+    var url = {{ url|json|safe }};
+
+    console.log(pagination);
+    categories.push({name: 'all', nameSlugify: 'all'});
+
+    window.history.pushState({}, "", url);
+    var categoriesContainer = $('.categoriesContainer');
+
+    var href = location.href.split('/');
+    for (var i = 0; i < categories.length; i++) {
+        var category = categories[i];
+        href[5] = category.nameSlugify;
+        var p = $('<span style="padding-right: 20px;">');
+        var a = $('<a>', {
+            href: href.join('/').replace('page-' + pagination.page, 'page-1')
+        }).html(category.name);
+        p.append(a);
+        categoriesContainer.append(p);
+    }
+
+
+    var index = location.href.indexOf('&');
+
+    function getUrlParameter(sParam) {
+        var sPageURL = window.location.search.substring(1);
+        var sURLVariables = sPageURL.split('&');
+        for (var i = 0; i < sURLVariables.length; i++) {
+            var sParameterName = sURLVariables[i].split('=');
+            if (sParameterName[0] == sParam) {
+                return sParameterName[1];
+            }
         }
+    }
+    var order = getUrlParameter('order');
+
+    var orders = ['popularity', 'views', 'newest'];
+
+    if (order != undefined) {
+        for (var i = 0; i < orders.length; i++) {
+            var od = orders[i];
+            var p = $('<span style="padding-right: 20px;">');
+            var a = $('<a>', {
+                href: location.href.replace(order, od)
+            }).html(od);
+            p.append(a);
+            $('.orderContainer').append(p);
+        }
+    }
+    var time = getUrlParameter('time');
+
+    var times = ['day', 'week', 'month', 'year'];
+
+    if (time != undefined) {
+        for (var i = 0; i < times.length; i++) {
+            var od = times[i];
+            var p = $('<span style="padding-right: 20px;">');
+            var a = $('<a>', {
+                href: location.href.replace(time, od)
+            }).html(od);
+            p.append(a);
+            $('.timeContainer').append(p);
+        }
+    } else {
+        for (var i = 0; i < times.length; i++) {
+            var od = times[i];
+            var p = $('<span style="padding-right: 20px;">');
+            var a = $('<a>', {
+                href: location.href + "&time=" + od
+            }).html(od);
+            p.append(a);
+            $('.timeContainer').append(p);
+        }
+    }
+
+    for (var i = 0; i < pagination.pages; i++) {
+        console.log('lel');
+        $('.pagination').append($('<a>', {
+            href: location.href.replace('page-' + pagination.page, 'page-' + (i + 1))
+        }).html(String(i + 1 + "")));
+    }
+    $(function () {
+        var works = {{ works|json|safe }}
+                console.log(works);
 
         $(document).on("click", ".like", function (event) {
+            if (user.length < 1)
+                return alert('necesitas logearte');
+            
             var scope = $(this);
             $.ajax({
                 type: "POST",
@@ -60,7 +208,45 @@
                 success: function (data) {
                     if (data.code == 202) {
                         scope.text('Unlike');
+                        var likes = scope.parent().find('.likes');
+                        var numLikes = parseInt(likes.text(), 10);
+                        likes.text(++numLikes);
                         scope.removeClass('like').addClass('unlike');
+                    }
+                    console.log(data);
+                }
+            });
+            return false;
+        });
+
+        $(document).on("click", ".featured", function (event) {
+            var scope = $(this);
+            $.ajax({
+                type: "POST",
+                url: "/user/work/featured/",
+                data: {idWork: scope.attr('id')},
+                success: function (data) {
+                    if (data.code == 202) {
+                        scope.parent().find('.featuredlogo').show();
+                        scope.text('Unfeatured');
+                        scope.removeClass('featured').addClass('unfeatured');
+                    }
+                    console.log(data);
+                }
+            });
+            return false;
+        });
+        $(document).on("click", ".unfeatured", function (event) {
+            var scope = $(this);
+            $.ajax({
+                type: "POST",
+                url: "/user/work/unfeatured/",
+                data: {idWork: scope.attr('id')},
+                success: function (data) {
+                    if (data.code == 202) {
+                        scope.parent().find('.featuredlogo').hide();
+                        scope.text('Featured');
+                        scope.removeClass('unfeatured').addClass('featured');
                     }
                     console.log(data);
                 }
@@ -76,6 +262,10 @@
                 data: {idWork: scope.attr('id')},
                 success: function (data) {
                     if (data.code == 202) {
+                        var likes = scope.parent().find('.likes');
+                        var numLikes = parseInt(likes.text(), 10);
+                        likes.text(--numLikes);
+
                         scope.text('Like');
                         scope.removeClass('unlike').addClass('like');
                     }
