--- a/public/css/style-guide.css
+++ b/public/css/style-guide.css
@@ -284,6 +284,53 @@ html {
   font-family: 'Roboto Condensed';
 }
 /*------------------------------------*
+	$ INPUTS
+*------------------------------------*/
+.search {
+  position: relative;
+}
+.search input {
+  width: 100%;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 0.75em 0 0.75em 2em;
+  color: #555;
+  font-size: 1rem;
+}
+.search i {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  -moz-transform: translate(0, -50%);
+  -o-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  left: 0.75em;
+  color: #808080;
+}
+.input[type="text"],
+.input[type="email"],
+.input[type="password"] {
+  font-size: 1rem;
+  padding: 0.5em;
+  color: #555;
+  border: 1px solid #ccc;
+  width: 100%;
+}
+.input[type="text"]:focus,
+.input[type="email"]:focus,
+.input[type="password"]:focus {
+  border-color: rgba(82,168,236,0.8);
+  -webkit-box-shadow: 0 0 8px rgba(82,168,236,0.6);
+  box-shadow: 0 0 8px rgba(82,168,236,0.6);
+}
+.input[type="text"][data-size='large'],
+.input[type="email"][data-size='large'],
+.input[type="password"][data-size='large'] {
+  font-size: 1.15rem;
+}
+/*------------------------------------*
 	$ WORKS
 *------------------------------------*/
 .works {
@@ -356,25 +403,90 @@ html {
   width: 16.666666666666668%;
 }
 /*------------------------------------*
-	$ LOGIN
+	$ ARTISTS
 *------------------------------------*/
-.login-modal {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  background: rgba(0,0,0,0.6);
-  padding: 3rem 1rem;
-  overflow: auto;
-  display: none;
+.artists {
+  padding: 0 0.5rem;
+  overflow: hidden;
 }
-.login-box {
-  background: #fff;
-  max-width: 400px;
-  margin: auto;
-  padding: 1rem 1.5rem 1.5rem 1.5rem;
+.artist {
+  margin: 1rem 0.5rem;
+  border: 1px solid #ddd;
+  -webkit-transition: box-shadow ease-in-out 125ms;
+  -moz-transition: box-shadow ease-in-out 125ms;
+  -o-transition: box-shadow ease-in-out 125ms;
+  -ms-transition: box-shadow ease-in-out 125ms;
+  transition: box-shadow ease-in-out 125ms;
 }
-.login-box__header {
+.artist .artist-header {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  margin: 0.5em;
+}
+.artist .artist-header .avatar {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  max-width: 56.25px;
+  padding: 0.5em;
+}
+.artist .artist-header .avatar img {
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
+.artist .artist-header .info {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  padding: 0.25em;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  -o-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.artist .artist-works {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -o-box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.artist .artist-works .work {
+  width: 33.333333%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  height: 75px;
+  background-position: center center;
+}
+.artist .artist-follow {
+  padding: 1em;
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -387,125 +499,108 @@ html {
   -ms-flex-pack: center;
   -webkit-justify-content: center;
   justify-content: center;
-  padding: 0.5rem;
 }
-/*------------------------------------*
-	$ FORMS
-*------------------------------------*/
-.login-form .facebook-button,
-.register-form .facebook-button {
-  margin: 1rem 0 1.5rem 0;
+.artist:hover {
+  -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
+  box-shadow: rgba(0,0,0,0.35) 0 0 10px;
 }
-.login-form input,
-.register-form input,
-.login-form .separator-text,
-.register-form .separator-text {
-  margin: 0.5rem 0;
+@media screen and (min-width: 226px) and (max-width: 450px) {
+  .artists[data-columns]::before {
+    content: '1 .column.size-1of1';
+  }
 }
-/*------------------------------------*
-	$ INPUTS
-*------------------------------------*/
-.search {
-  position: relative;
+@media screen and (min-width: 451px) and (max-width: 675px) {
+  .artists[data-columns]::before {
+    content: '2 .column.size-1of2';
+  }
 }
-.search input {
-  width: 100%;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  padding: 0.75em 0 0.75em 2em;
-  color: #555;
-  font-size: 1rem;
+@media screen and (min-width: 676px) and (max-width: 900px) {
+  .artists[data-columns]::before {
+    content: '3 .column.size-1of3';
+  }
 }
-.search i {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translate(0, -50%);
-  -moz-transform: translate(0, -50%);
-  -o-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-  left: 0.75em;
-  color: #808080;
+@media screen and (min-width: 901px) and (max-width: 1125px) {
+  .artists[data-columns]::before {
+    content: '4 .column.size-1of4';
+  }
 }
-.input[type="text"],
-.input[type="email"],
-.input[type="password"] {
-  font-size: 1rem;
-  padding: 0.5em;
-  color: #555;
-  border: 1px solid #ccc;
+@media screen and (min-width: 1126px) {
+  .artists[data-columns]::before {
+    content: '5 .column.size-1of5';
+  }
+}
+.column {
+  float: left;
+}
+.size-1of1 {
   width: 100%;
 }
-.input[type="text"]:focus,
-.input[type="email"]:focus,
-.input[type="password"]:focus {
-  border-color: rgba(82,168,236,0.8);
-  -webkit-box-shadow: 0 0 8px rgba(82,168,236,0.6);
-  box-shadow: 0 0 8px rgba(82,168,236,0.6);
+.size-1of2 {
+  width: 50%;
 }
-.input[type="text"][data-size='large'],
-.input[type="email"][data-size='large'],
-.input[type="password"][data-size='large'] {
-  font-size: 1.15rem;
+.size-1of3 {
+  width: 33.333333333333336%;
 }
-.header {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  -o-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -o-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  max-width: 1100px;
-  margin: 0.5rem auto;
+.size-1of4 {
+  width: 25%;
 }
-.category-menu {
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
+.size-1of5 {
+  width: 20%;
 }
-.category-menu .thick-menu {
-  max-width: 1100px;
-  margin: auto;
+.work1 {
+  background-image: url("../img/works/obra1.jpg");
 }
-.slogan {
+.work2 {
+  background-image: url("../img/works/obra2.jpg");
+}
+.work3 {
+  background-image: url("../img/works/obra3.jpg");
+}
+.work4 {
+  background-image: url("../img/works/obra4.jpg");
+}
+.work5 {
+  background-image: url("../img/works/obra5.jpg");
+}
+.work6 {
+  background-image: url("../img/works/obra6.jpg");
+}
+.work7 {
+  background-image: url("../img/works/obra7.jpg");
+}
+.work8 {
+  background-image: url("../img/works/obra8.jpg");
+}
+.work9 {
+  background-image: url("../img/works/obra9.jpg");
+}
+.work10 {
+  background-image: url("../img/works/obra10.jpg");
+}
+.work11 {
+  background-image: url("../img/works/obra11.jpg");
+}
+.work12 {
+  background-image: url("../img/works/obra12.jpg");
+}
+/*------------------------------------*
+	$ STYLE GUIDE
+*------------------------------------*/
+body {
   padding: 1rem;
-  text-align: center;
-  max-width: 1100px;
-  margin: auto;
+  background: #f5f5f5;
 }
-.slogan .button-solid {
-  margin: 0.5rem;
-}
-.works-menu {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  -o-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-  max-width: 1100px;
+.style-guide-wrapper {
   margin: auto;
-  padding: 0 1rem;
-}
-.works {
   max-width: 1100px;
-  margin: auto;
+}
+.style-guide-element {
+  margin-top: 1rem;
+  background: #fff;
+}
+.style-guide-title {
+  color: #aaa;
+  font-size: 0.9rem;
+  font-family: 'Arial';
+  text-align: right;
 }
