--- a/public/stylus/lib/reset.styl
+++ b/public/stylus/lib/reset.styl
@@ -6,7 +6,6 @@ figure
 
 img
 	vertical-align top
-	// max-width 100%
 	width 100%
 
 p
@@ -21,10 +20,21 @@ button
 	padding 0
 	outline none
 
+select
+	border none
+	outline none
+	background white
+
 ul
 	margin 0
 	padding 0
 	list-style none
+
+input
+	outline 0
+
+input[type="submit"]
+	border none
 
 *
 	box-sizing border-box
