--- a/public/stylus/style-guide.styl
+++ b/public/stylus/style-guide.styl
@@ -29,55 +29,40 @@
 @import 'elements/buttons.styl'
 
 /*------------------------------------*
+	$ INPUTS
+*------------------------------------*/
+@import 'elements/inputs.styl'
+
+/*------------------------------------*
 	$ WORKS
 *------------------------------------*/
 @import 'elements/works.styl'
 
 /*------------------------------------*
-	$ LOGIN
+	$ ARTISTS
 *------------------------------------*/
-@import 'elements/login.styl'
+@import 'elements/artists.styl'
+
+
+
 
 /*------------------------------------*
-	$ FORMS
+	$ STYLE GUIDE
 *------------------------------------*/
-@import 'elements/forms.styl'
-
-/*------------------------------------*
-	$ INPUTS
-*------------------------------------*/
-@import 'elements/inputs.styl'
-
-
-.header
-	display flex
-	justify-content space-between
-	align-items center
-	max-width max-width
-	margin .5rem auto
-	
-.category-menu
-	border-top 1px solid #eee
-	border-bottom 1px solid #eee
-	.thick-menu
-		max-width max-width
-		margin auto
-	
-.slogan
+body
 	padding 1rem
-	text-align center
-	max-width max-width
-	margin auto
-	.button-solid
-		margin .5rem
-		
-.works-menu
-	display flex
-	justify-content space-between
-	max-width max-width
-	margin auto
-	padding 0 1rem
+	background style-guide-background
 	
-.works
-	max-width max-width
+.style-guide-wrapper
 	margin auto
+	max-width max-width
+.style-guide-element
+	margin-top 1rem
+	background style-guide-element-background
+	
+.style-guide-title
+	color #aaa
+	font-size .9rem
+	font-family 'Arial'
+	text-align right
+	// display none
